--- a/src/main/resources/frontend/index.html
+++ b/src/main/resources/frontend/index.html
@@ -26,8 +26,8 @@
   <link rel="stylesheet" href="/assets/css/fonts.min.css?v=64223515"/>
   <link rel="stylesheet" href="/assets/css/basic.min.css?v=64223515"/>
   <link rel="stylesheet" href="/assets/css/extra.min.css?v=64223515"/><!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"/><![endif]-->
-  <script src="/assets/js/scripts.min.js?v=64223515"/>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+<script src="/assets/js/scripts.min.js?v=64223515"></script>
 </head>
 <body class="Site">
   <!--if lt IE 8
