--- a/src/main/resources/frontend/signin.html
+++ b/src/main/resources/frontend/signin.html
@@ -81,7 +81,7 @@
                   </div>
                   <div class="row-block">
                     <label class="toggle Login-type">
-                      <input type="radio" name="typeauth" value="mailtype"/><span class="toggle-box"></span><span class="toggle-text">E-mail</span>
+                      <input type="radio" name="typeauth" value="mailtype" id="emailButton" /><span class="toggle-box"></span><span class="toggle-text">E-mail</span>
                     </label>
                   </div>
                 </div>
