--- a/src/main/resources/frontend/postponed.html
+++ b/src/main/resources/frontend/postponed.html
@@ -127,11 +127,12 @@
           <div class="Cart-total">
             <div class="Cart-block Cart-block_total">
             </div>
-            <div class="Cart-block">
-              <button class="btn btn_success btn_md Cart-buyAll" data-sendstatus="CART"
-                      data-bookid="[1111, 1122, 1133]">Купить все
-              </button>
-            </div>
+<!--            <div class="Cart-block">-->
+<!--              <button class="btn btn_success btn_md Cart-buyAll" data-sendstatus="CART"-->
+<!--                      data-bookid="[1111, 1122, 1133]">Купить все-->
+<!--              </button>-->
+<!--            </div>-->
+            <div class="Cart-block"><a class="btn btn_success btn_md" href="/order.html" th:href="@{/book/pay}">Купить все</a>
           </div>
         </form>
       </main>
