--- a/src/main/resources/frontend/profile.html
+++ b/src/main/resources/frontend/profile.html
@@ -145,46 +145,12 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td>15 мая 2017 10:03
-                        </td>
-                        <td><span class="Transactions_textSuccess">
-                            <strong>+500 р.
-                            </strong></span>
-                        </td>
-                        <td>Пополнение счета
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>5 марта 2017 13:40
-                        </td>
-                        <td><span class="Transactions_textSuccess">
-                            <strong>-480 р.
-                            </strong></span>
-                        </td>
-                        <td>Покупка книги&#32;<a href="/books/slug.html" th:href="@{/books/slug}">История Беларуси</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>1 февраля 2017 04:10
-                        </td>
-                        <td><span class="Transactions_textSuccess">
-                            <strong>+10 000 р.
-                            </strong></span>
-                        </td>
-                        <td>Пополнение с помощью WebMoney
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>1 января 2017 09:33
-                        </td>
-                        <td><span class="Transactions_textSuccess">
-                            <strong>+7 896 р.
-                            </strong></span>
-                        </td>
-                        <td>Пополнение с помощью Яндекс.Деньги
-                        </td>
-                      </tr>
+                    <tr th:each="transaction : ${curUser.getTransactions()}">
+                      <td th:text="${transaction.formattedDateTime()}">15 мая 2017 10:03</td>
+                      <td th:text="${transaction.getValue()}"><span
+                              class="Transactions_textSuccess"><strong>+500 р.</strong></span></td>
+                      <td th:text="${transaction.getDescription()}">Пополнение счета</td>
+                    </tr>
                     </tbody>
                   </table>
                 </div>
@@ -193,7 +159,8 @@
               </div>
             </div>
             <div class="Tabs-block" id="topup">
-              <form class="form Topup" action="#" method="post" data-sendHash="34534535">
+              <form class="form Topup" action="#" method="post" data-sendHash="34534535"
+                    th:action="${'/books/topupaccount'}">
                 <div class="Topup-wrap">
                   <strong class="Topup-title">Введите сумму, на которую хотите пополнить свой счет:
                   </strong>
