--- a/src/main/resources/frontend/profile.html
+++ b/src/main/resources/frontend/profile.html
@@ -122,8 +122,8 @@
                           <button class="btn btn_primary" type="submit">Сохранить
                           </button>
                         </div>
-                        <div class="Profile-success">Профиль успешно сохранен
-                        </div>
+                        <span th:if="${smtp_authentication_failed}" th:text="${smtp_authentication_failed.getLocalizedMessage()}"
+                              style="color: red"></span>
                       </div>
                     </div>
                   </div>
@@ -154,7 +154,11 @@
                     </tbody>
                   </table>
                 </div>
-                <div class="Transactions-footer Transactions-footer_center"><a class="btn btn_primary Transactions-get" href="#" data-transactionoffset="4" data-transactionlimit="10" data-transactionsort="asc">Показать еще</a>
+<!--                <div class="Transactions-footer Transactions-footer_center"><a class="btn btn_primary Transactions-get"-->
+<!--                                                                               href="#" data-transactionoffset="4"-->
+<!--                                                                               data-transactionlimit="10"-->
+<!--                                                                               data-transactionsort="asc">Показать-->
+<!--                  еще</a>-->
                 </div>
               </div>
             </div>
